fix: improve contrast of selection background color

--- a/src/styles.less
+++ b/src/styles.less
@@ -7,6 +7,11 @@
     "Roboto", "Segoe UI", "Helvetica Neue", sans-serif;
   --tui-text-action: #706900;
   --tui-text-action-hover: #a09500;
+  --tui-service-selection-background: color-mix(
+    in srgb,
+    #706900,
+    transparent 75%
+  );
   --tui-background-accent-1: #706900;
   --tui-background-accent-1-hover: #a09500;
   --tui-background-accent-1-pressed: #5f5900;
